// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet on iOS renders nothing (the native sheet owns the UI) 1`] = `
{
  "lines": 304,
  "sha256": "ad0c64178ca7f8b957149c6a811c1da83a69016f10973d7036b51534f6ed0b90",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet project ref, android 390 1`] = `
{
  "lines": 344,
  "sha256": "56dbcff694d5d747b5260eb6d80b95240ea25226e707680eb1a763c3ab41bc4b",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet project ref, web 390 1`] = `
{
  "lines": 344,
  "sha256": "2e91d49ae86ee7c8858461aa8e50669f483c600b9c718234f1c8126908c4f8ca",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet rfi ref, android 390 1`] = `
{
  "lines": 352,
  "sha256": "ef18ffe4e7a15603f76310632b38244567fb8d6545cb55f7326f6db571e775f3",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet rfi ref, web 390 1`] = `
{
  "lines": 352,
  "sha256": "b4736bbd56bc53e81c27960a5ce8e0797dbc269812025423ddc3a1653dfbd600",
}
`;

exports[`lane B1 — components (golden, 390 phone) RecordPaymentModal, open (iOS) 1`] = `
{
  "lines": 355,
  "sha256": "ef084fdf69788a0e14dba404c1b4a9364a6c20a00471992015a9a6f03eb283dc",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) budget-dashboard 1`] = `
{
  "lines": 454,
  "sha256": "168b7958a0b6635ee34d14dfd66d399d6bc79c08e502ebf4dae77b53d25ae01e",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) cash-flow (no project) 1`] = `
{
  "lines": 724,
  "sha256": "a5c80f972c78526268e6e974a2dd5377e2ee383d2e8d4a359c15bd66b3c10538",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) cash-flow with a project (balance, expense, payment sheets) 1`] = `
{
  "lines": 724,
  "sha256": "4ff988ea63d67dbc6826738cd56f260dd8d5ad02d7a999a7b44f8953e461dfb9",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) job-costing (commitment editor + phase sheet mounted) 1`] = `
{
  "lines": 763,
  "sha256": "990c836984fdb4db44824d4ca6b421c967adfc9be23f9a94561bad7546c64f44",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) job-costing: the first phase pressed (PhaseDetailModal open) 1`] = `
{
  "lines": 815,
  "sha256": "05432ea312ad7745ee3432503c4a7d37c8def58de2c7661409202e3ea522bf34",
}
`;
